# scribo

./: Cargo.toml  README.md  test.json
src/: main.rs  note.rs
src/commands/: add.rs  clear.rs  delete.rs  list.rs  mod.rs
